--- a/application-sets/my-application-sets/single-app-many-times.yml
+++ b/application-sets/my-application-sets/single-app-many-times.yml
@@ -15,14 +15,11 @@ spec:
                 - path: application-sets/example-apps/*
           # cluster generator, 'child' #2
           - clusters:
-              selector:
-                matchLabels:
-                  argocd.argoproj.io/secret-type: cluster
   template:
     metadata:
       name: '{{path.basename}}-{{name}}'
     spec:
-      project: '{{metadata.labels.environment}}'
+      project: 'default'
       source:
         repoURL: https://github.com/argoproj/argo-cd.git
         targetRevision: HEAD
