--- a/sync-hooks-waves/06-waves-and-hooks/smoke-tests.yml
+++ b/sync-hooks-waves/06-waves-and-hooks/smoke-tests.yml
@@ -5,6 +5,10 @@ metadata:
   generateName: smoke-tests-
   labels:
     codefresh.io/cert: smoke-job  
+  annotations:
+    argocd.argoproj.io/hook: PostSync
+    argocd.argoproj.io/sync-wave: "10" 
+   
 spec:
   template:
     spec:
