--- a/custom-diff/applications/external-helm-app.yml
+++ b/custom-diff/applications/external-helm-app.yml
@@ -27,3 +27,7 @@ spec:
     kind: Secret
     jsonPointers:
     - /data/my-password 
+  - group: apps
+    kind: Deployment
+    jsonPointers:
+    - /metadata/annotations/creation
